--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
 @import "listas.css";
 
 :root {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
   --col-active: #4646462c;
   --color-header: white;
   --colorMiNav: white;
@@ -49,12 +49,6 @@ figure img {
   max-width: 100%;
 }
 
-legend,
-p label {
-  display: block;
-  font-weight: bold;
-  font-size: 0.7rem;
-}
 
 p label>* {
   display: block;
